<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="@drawable/note_shape"
        android:padding="20dp">

        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="9dp"
            android:layout_toRightOf="@id/item_mainlv_top_tv2"
            android:text="￥ 0"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv_out"
            android:layout_marginTop="9dp"
            android:text="@string/month_in" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_mainlv_top_tv1"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:text="￥ 0"

            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out" />

        <ImageView
            android:id="@+id/item_mainlv_top_iv_hide"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_alignTop="@id/item_mainlv_top_tv_out"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-2dp"
            android:layout_marginRight="25dp"
            android:src="@mipmap/ih_show" />

        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="0dp"
            android:layout_toLeftOf="@id/item_mainlv_top_tv_budget"
            android:text="@string/budget" />

        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/item_mainlv_top_tv2"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="0dp"
            android:text="￥ 0"
            android:textColor="@color/black" />


    </RelativeLayout>

    <TextView
        android:id="@+id/item_mainlv_top_tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="今日支出 ￥0 收入 ￥0"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>